add request_id param in drop\speedup\resend request body

--- a/cobo_waas2_openapi_spec/components/schemas/transactions/smart_contract_call.yaml
+++ b/cobo_waas2_openapi_spec/components/schemas/transactions/smart_contract_call.yaml
@@ -45,6 +45,16 @@ properties:
       calldata for this transaction. Commonly used as part of contract interaction.
     format: byte
     example: "U3dhZ2dlciByb2Nrcw=="
+  category_names:
+    type: array
+    description: The category names for transfer.
+    items:
+      type: string
+      example: 'Trading'
+  description:
+    type: string
+    description: The description for transfer.
+    example: 'Transfer from wallet'
   mpc_used_key_group:
     $ref: './mpc_signing_group.yaml'
   fee:
