--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/tss_groups.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/tss_groups.yaml
@@ -1,7 +1,7 @@
 type: object
 description: The data for the TSS group ID.
 properties:
-  group_id:
+  tss_group_id:
     type: string
     description: The TSS group ID.
     example: 'mMedDioOKhTlhGyQRzMv'
