Change token_id to chain_id

--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/create_wallets/create_wallet.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/create_wallets/create_wallet.yaml
@@ -4,7 +4,7 @@ oneOf:
 - $ref: './create_smart_contract_wallet.yaml'
 - $ref: './create_exchange_wallet.yaml'
 discriminator:
-  propertyName: type
+  propertyName: wallet_type
   mapping:
     Custodial: '#/components/schemas/CreateCustodialWallet'
     MPC: '#/components/schemas/CreateMpcWallet'
