--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/addresses/address_info.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/addresses/address_info.yaml
@@ -2,17 +2,16 @@ type: object
 description: The address information.
 required:
   - address
-  - token_id
+  - chain_id
 properties:
   address:
     type: string
     description: The wallet address.
     example: "0x0000000000000000000000000000000000000000"
-  token_id:
+  chain_id:
     type: string
-    description: The token ID, which is the unique identifier of a token. You can retrieve the IDs of all the tokens you can use by calling [List enabled tokens](/developers/v2/api-references/wallets/list-enabled-tokens).
-    pattern: ^[A-Z]+(_[A-Z0-9]+)?$
-    example: 'ETH_USDT'
+    description: The chain ID, which is the unique identifier of a blockchain. You can retrieve the IDs of all the chains you can use by calling [List enabled chains](/v2/api-references/wallets/list-enabled-chains).
+    example: 'ETH'
   memo:
     type: string
     description: The memo code.
