--- a/v2/cobo_waas2_openapi_spec/dev_main.yaml
+++ b/v2/cobo_waas2_openapi_spec/dev_main.yaml
@@ -829,6 +829,8 @@ components:
       $ref: "./components/responses/wallets/get_max_transferable_value.yaml"
     getAddressesResponse:
       $ref: "./components/responses/wallets/get_addresses.yaml"
+    getAddressResponse:
+      $ref: "./components/responses/wallets/get_a_address.yaml"
     createAddressResponse:
       $ref: "./components/responses/wallets/create_address.yaml"
     getAddressValidityResponse:
