--- a/v2/cobo_waas2_openapi_spec/components/responses/wallets/mpcs/delete_key_group.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/responses/wallets/mpcs/delete_key_group.yaml
@@ -1,4 +1,4 @@
-description: Successfully deleted the specified key share group.
+description: Successfully deleted the specified vault group.
 content:
   application/json:
     schema:
