--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/key_group_type.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/key_group_type.yaml
@@ -6,7 +6,7 @@ enum: [
 ]
 example: "MainGroup"
 description: |
-  The type of key share group. Possible values include:
+  The type of vault group. Possible values include:
   
   - `MainGroup`: A [Main Group](https://manuals.cobo.com/en/portal/mpc-wallets/ocw/create-key-share-groups).
   
