change key group to key share holer group

--- a/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/key_group_type_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/key_group_type_optional.yaml
@@ -1,4 +1,4 @@
-name: key_group_type
+name: key_share_holder_group_type
 in: query
 description: |
     The selected key share group type to retrieve. Possible values include:
