--- a/v2/cobo_waas2_openapi_spec/components/request_bodies/wallets/mpcs/create_key_group.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/request_bodies/wallets/mpcs/create_key_group.yaml
@@ -7,7 +7,7 @@ content:
         - group_type
         - node_count
         - threshold
-        - key_holders
+        - key_share_holders
 
       properties:
         group_type:
@@ -32,7 +32,7 @@ content:
 
             2. Threshold must be less than or equal to node count.
           example: 2
-        key_holders:
+        key_share_holders:
           type: array
           items:
             type: object
