--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transfers/sources/mpc_transfer_source.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transfers/sources/mpc_transfer_source.yaml
@@ -40,5 +40,5 @@ allOf:
                   type: integer
                   description: The output index of the UTXO.
                   example: 0
-      mpc_used_key_group:
+      mpc_used_key_share_holder_group:
         $ref: '../../mpc_signing_group.yaml'
