--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/tss_groups.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/tss_groups.yaml
@@ -1,9 +1,9 @@
 type: object
-description: The data for the TSS group ID.
+description: The data for the TSS key share group ID.
 properties:
-  tss_group_id:
+  tss_key_share_group_id:
     type: string
-    description: The TSS group ID.
+    description: The TSS key share group ID.
     example: 'mMedDioOKhTlhGyQRzMv'
   curve:
     $ref: './curve_type.yaml'
