--- a/v2/cobo_waas2_openapi_spec/dev_main.yaml
+++ b/v2/cobo_waas2_openapi_spec/dev_main.yaml
@@ -150,9 +150,9 @@ paths:
     $ref: "./paths/wallets/mpcs/mpc_vaults.yaml"
   /wallets/mpc/vaults/{vault_id}:
     $ref: "./paths/wallets/mpcs/mpc_vault.yaml"
-  /wallets/mpc/vaults/{vault_id}/key_groups:
+  /wallets/mpc/vaults/{vault_id}/key_share_holder_groups:
     $ref: './paths/wallets/mpcs/key_groups.yaml'
-  /wallets/mpc/vaults/{vault_id}/key_groups/{key_share_group_id}:
+  /wallets/mpc/vaults/{vault_id}/key_share_holder_groups/{key_share_holder_group_id}:
     $ref: './paths/wallets/mpcs/key_group.yaml'
   /wallets/mpc/vaults/{vault_id}/tss_requests:
     $ref: './paths/wallets/mpcs/tss_requests.yaml'
