--- a/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/key_group.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/key_group.yaml
@@ -1,7 +1,7 @@
 get:
   tags:
     - Wallets - MPC Wallets
-  operationId: get_key_group
+  operationId: get_key_share_holder_group
   summary: Get key share group information
   description: |
     This operation retrieves detailed information about a specified key share group.
@@ -22,7 +22,7 @@ get:
 put:
   tags:
     - Wallets - MPC Wallets
-  operationId: update_key_group
+  operationId: update_key_share_holder_group
   summary: Update key share group
   description: | 
     This operation updates a specified active [Signing Group](https://manuals.cobo.com/en/portal/mpc-wallets/ocw/create-key-share-groups). For example, you can use this operation to upgrade a Signing Group to the [Main Group](https://manuals.cobo.com/en/portal/mpc-wallets/ocw/create-key-share-groups).
@@ -48,7 +48,7 @@ put:
 delete:
   tags:
     - Wallets - MPC Wallets
-  operationId: delete_key_group
+  operationId: delete_key_share_holder_group
   summary: Delete key share group
   description: This operation deletes a specified key share group.
   security:
