Adjust operationId; Rename spendable to utxo

--- a/v2/cobo_waas2_openapi_spec/components/request_bodies/wallets/lock_utxos.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/request_bodies/wallets/lock_utxos.yaml
@@ -4,9 +4,9 @@ content:
     schema:
       type: object
       required:
-        - spendables
+        - utxos
       properties:
-        spendables:
+        utxos:
           type: array
           items:
             type: object
