--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/estimate_fee/estimate_fee_transfer.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/estimate_fee/estimate_fee_transfer.yaml
@@ -22,3 +22,5 @@ properties:
     example: 'ETH_USDT'
   destination:
     $ref: '../transfers/destinations/transfer_destination.yaml'
+  fee_type:
+    $ref: '../fees/fee_type.yaml'
