--- a/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/projects.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/projects.yaml
@@ -19,7 +19,7 @@ post:
 get:
   tags:
     - Wallets - MPC Wallets
-  operationId: list_mpc_project
+  operationId: list_mpc_projects
   summary: List all projects
   description: |
     This operation retrieves a list of all projects.
