--- a/v2/cobo_waas2_openapi_spec/paths/wallets/tokens.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/tokens.yaml
@@ -1,7 +1,7 @@
 get:
   tags:
     - Wallets
-  operationId: get_tokens
+  operationId: list_supported_tokens
   summary: List supported tokens
   description: |
     This operation retrieves all tokens supported by a specific wallet type or subtype. 
