--- a/v2/cobo_waas2_openapi_spec/paths/wallets/utxos_lock.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/utxos_lock.yaml
@@ -3,7 +3,7 @@ parameters:
 post:
   tags:
     - Wallets
-  operationId: lock_spendable_list
+  operationId: lock_utxos
   summary: Lock UTXOs
   description: |
     This operation locks the UTXOs with specified transaction hashes. Locked UTXOs cannot be transferred until unlocked.
@@ -12,9 +12,9 @@ post:
   security:
     - CoboAuth: []
   requestBody:
-    $ref: "../../components/request_bodies/wallets/lock_spendables.yaml"
+    $ref: "../../components/request_bodies/wallets/lock_utxos.yaml"
   responses:
     '201':
-      $ref: "../../components/responses/wallets/lock_spendables.yaml"
+      $ref: "../../components/responses/wallets/lock_utxos.yaml"
     '400':
       $ref: "../../components/responses/errors/400_bad_request.yaml"
