--- a/v2/cobo_waas2_openapi_spec/paths/webhooks/endpoint_by_id.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/webhooks/endpoint_by_id.yaml
@@ -16,7 +16,7 @@ put:
     - Developers - Webhooks
   summary: Update webhook endpoint
   description: This operation updates the information of a specified webhook endpoint.
-  operationId: update_webhook_endpoint
+  operationId: update_webhook_endpoint_by_id
   security:
     - CoboAuth: []
     - OAuth2:
