--- a/v2/cobo_waas2_openapi_spec/paths/webhooks/retry_by_event_id.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/webhooks/retry_by_event_id.yaml
@@ -7,7 +7,7 @@ post:
   summary: Retry event
   description: |
     This operation retries delivering a webhook event with the specified event ID. You can only retry delivering a webhook event in the `Retrying` or `Failed` status.
-  operationId: retry_webhook_event
+  operationId: retry_webhook_event_by_id
   security:
     - CoboAuth: []
     - OAuth2:
