--- a/v2/cobo_waas2_openapi_spec/dev_main_working.yaml
+++ b/v2/cobo_waas2_openapi_spec/dev_main_working.yaml
@@ -120,12 +120,12 @@ paths:
     $ref: "./paths/wallets/wallet_by_id.yaml"
   /wallets/{wallet_id}/delete:
     $ref: "./paths/wallets/wallet_by_id_delete.yaml"
-  /wallets/{wallet_id}/spendables:
-    $ref: "./paths/wallets/spendables.yaml"
-  /wallets/{wallet_id}/spendables/lock:
-    $ref: "./paths/wallets/spendables_lock.yaml"
-  /wallets/{wallet_id}/spendables/unlock:
-    $ref: "./paths/wallets/spendables_unlock.yaml"
+  /wallets/{wallet_id}/utxos:
+    $ref: "./paths/wallets/utxos.yaml"
+  /wallets/{wallet_id}/utxos/lock:
+    $ref: "./paths/wallets/utxos_lock.yaml"
+  /wallets/{wallet_id}/utxos/unlock:
+    $ref: "./paths/wallets/utxos_unlock.yaml"
   /wallets/{wallet_id}/max_transferable_value:
     $ref: "./paths/wallets/max_transferable_value.yaml"
   /wallets/{wallet_id}/addresses:
@@ -314,6 +314,8 @@ components:
       $ref: "./components/schemas/wallets/mpcs/key_group_status.yaml"
     KeyShareHolderGroupType:
       $ref: "./components/schemas/wallets/mpcs/key_group_type.yaml"
+    CreateKeyShareHolder:
+      $ref: "./components/schemas/wallets/mpcs/create_key_holder.yaml"
     KeyShareHolder:
       $ref: "./components/schemas/wallets/mpcs/key_holder.yaml"
     KeyShareHolderStatus:
@@ -732,8 +734,8 @@ components:
       $ref: "./components/request_bodies/wallets/update_wallet.yaml"
     createAddressBody:
       $ref: "./components/request_bodies/wallets/create_address.yaml"
-    lockSpendablesBody:
-      $ref: "./components/request_bodies/wallets/lock_spendables.yaml"
+    lockUtxosBody:
+      $ref: "./components/request_bodies/wallets/lock_utxos.yaml"
 
     # mpc wallets
     createKeyShareHolderGroupBody:
@@ -820,10 +822,10 @@ components:
       $ref: "./components/responses/wallets/update_wallet.yaml"
     deleteWalletResponse:
       $ref: "./components/responses/wallets/delete_wallet.yaml"
-    spendableListResponse:
-      $ref: "./components/responses/wallets/get_spendable_list.yaml"
-    lockSpendableResponse:
-      $ref: "./components/responses/wallets/lock_spendables.yaml"
+    listUtxoResponse:
+      $ref: "./components/responses/wallets/get_utxo_list.yaml"
+    lockUtxoResponse:
+      $ref: "./components/responses/wallets/lock_utxos.yaml"
     maxTransferableValueResponse:
       $ref: "./components/responses/wallets/get_max_transferable_value.yaml"
     getAddressesResponse:
