--- a/v2/cobo_waas2_openapi_spec/components/schemas/stakings/babylon_stake_extra.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/stakings/babylon_stake_extra.yaml
@@ -4,7 +4,7 @@ allOf:
     description: The stake extra for babylon.
     required:
       - finality_provider_public_key
-      - lock_time
+      - stake_block_time
     properties:
         finality_provider_public_key:
           description: The public key of finality provider.
