--- a/v2/cobo_waas2_openapi_spec/components/schemas/stakings/amount_status.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/stakings/amount_status.yaml
@@ -1,9 +1,17 @@
 type: string
 enum: [
+  "StakeInProgress",
   "Active",
-  "StakingProcessing",
-  "UnStakingProcessing",
+  "Rejected",
+  "LimitExceeded",
+  "Invalid",
+  "UnstakeInProgress",
   "Withdrawable",
+  "Active",
+  "WithdrawInProgress",
+  "Closed",
+  "Withdrawable"
 ]
-example: 'Success'
+
+example: 'Active'
 description: The status of staking amount.
